--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@headlessui/react": "^1.7.17",
         "next": "14.0.2",
         "react": "^18",
         "react-dom": "^18",
@@ -18,6 +19,8 @@
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@typescript-eslint/eslint-plugin": "^6.9.1",
+        "@typescript-eslint/parser": "^6.9.1",
         "autoprefixer": "^10.0.1",
         "eslint": "^8",
         "eslint-config-next": "14.0.2",
@@ -27,9 +30,7 @@
         "prettier": "^3.1.0",
         "prettier-plugin-tailwindcss": "^0.5.7",
         "tailwindcss": "^3.3.0",
-        "typescript": "^5",
-        "@typescript-eslint/eslint-plugin": "^6.9.1",
-        "@typescript-eslint/parser": "^6.9.1",
-        "tslint-config-prettier": "^1.18.0"
+        "tslint-config-prettier": "^1.18.0",
+        "typescript": "^5"
     }
 }
