--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@headlessui/react": "^1.7.17",
+        "daisyui": "^4.6.1",
         "next": "14.0.2",
         "react": "^18",
         "react-dom": "^18",
