--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@clerk/nextjs": "^4.29.12",
         "@headlessui/react": "^1.7.17",
         "daisyui": "^4.6.1",
         "next": "14.0.2",
