--- a/.env.local.example
+++ b/.env.local.example
@@ -1,7 +1,6 @@
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
-CLERK_SECRET_KEY=
 EMAIL_ME_API_KEY=
-SUPABASE_KEY=
-SUPABASE_URL=
-NEXT_PUBLIC_BASE_PLAN_LINK=
-NEXT_PUBLIC_PRO_PLAN_LINK=
+SUPABASE_SERVER_KEY=
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
+NEXT_PUBLIC_SUPABASE_URL=
+WEBHOOK_SECRET=
+STRIPE_PRIVATE=
