--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,5 +25,8 @@
     "editor.detectIndentation": false,
     "editor.tabSize": 4,
     "editor.indentSize": "tabSize",
-    "editor.formatOnSaveMode": "file"
+    "editor.formatOnSaveMode": "file",
+    "[typescriptreact]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    }
 }
