--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@clerk/nextjs": "^5.0.8",
         "@emailme/emailme-js": "^1.1.1",
         "@headlessui/react": "^1.7.17",
+        "@mdx-js/loader": "^3.0.1",
+        "@mdx-js/react": "^3.0.1",
+        "@next/mdx": "^14.2.3",
+        "@supabase/ssr": "^0.3.0",
         "@supabase/supabase-js": "^2.43.1",
+        "@types/mdx": "^2.0.13",
+        "@vercel/analytics": "^1.2.2",
         "daisyui": "^4.6.1",
-        "next": "14.0.2",
+        "next": "^14.2.3",
         "react": "^18",
         "react-dom": "^18",
         "react-hot-toast": "^2.4.1",
